fix: add netlify form attribute

--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
     <section id="contact" class="contact">
         <h2 class="section-title">Get In Touch</h2>
         <div class="contact-form">
-            <form name="contact" method="POST" data-netlify-recaptcha="true" data-netlify="true" id="contactForm">
+            <form name="contact" method="POST" netlify id="contactForm">
                 <input type="hidden" name="form-name" value="contact">
                 <div class="form-group">
                     <label for="name">Name</label>
@@ -611,7 +611,6 @@
         </div>
         <div class="contact-info">
             <p><strong>Email:</strong> hello@silkcitylabs.com</p>
-            <p><strong>Location:</strong> Manchester, Connecticut</p>
         </div>
     </section>
 
