fix: remove email from site

--- a/index.html
+++ b/index.html
@@ -419,10 +419,13 @@
         
         /* reCAPTCHA styling */
         [data-netlify-recaptcha] {
-            margin: 2rem 0;
+            margin: 2rem auto;
+            margin-bottom: 2.5rem;
             display: flex;
             justify-content: center;
+            align-items: center;
             min-height: 78px; /* Standard reCAPTCHA height */
+            text-align: center;
         }
         
         /* Local development placeholder */
@@ -659,9 +662,6 @@
                 </div>
                 <button type="submit" class="submit-btn">Send Message</button>
             </form>
-        </div>
-        <div class="contact-info">
-            <p><strong>Email:</strong> hello@silkcitylabs.com</p>
         </div>
     </section>
 
