fix: remove signup for now

--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
         <div class="hero-content">
             <h1>Weaving Digital Innovation</h1>
             <p>From Manchester's silk heritage to cutting-edge software solutions. We develop, publish, and market transformative digital products.</p>
-            <a href="#contact" class="cta-button">Start Your Project</a>
+            <!-- <a href="#contact" class="cta-button">Start Your Project</a> -->
         </div>
     </section>
 
@@ -641,7 +641,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="contact">
+    <!-- <section id="contact" class="contact">
         <h2 class="section-title">Get In Touch</h2>
         <div class="success-alert" id="successAlert">
             Thank you for your message! We'll get back to you soon.
@@ -668,7 +668,7 @@
                 <button type="submit" class="submit-btn">Send Message</button>
             </form>
         </div>
-    </section>
+    </section> -->
 
     <!-- Footer -->
     <footer>
