--- a/privacy.html
+++ b/privacy.html
@@ -133,8 +133,7 @@
         <p>If you have questions about this privacy policy or our data practices, please contact us at:</p>
         <p>
             Silk City Labs LLC<br>
-            Email: support@silkcitylabs.com<br>
-            Glastonbury, CT
+            Email: support@silkcitylabs.com
         </p>
         
         <h2>Changes to This Policy</h2>
