--- a/terms.html
+++ b/terms.html
@@ -139,8 +139,7 @@
         <p>If you have any questions about these Terms, please contact us at:</p>
         <p>
             Silk City Labs LLC<br>
-            Email: support@silkcitylabs.com<br>
-            Glastonbury, CT
+            Email: support@silkcitylabs.com
         </p>
     </div>
 </body>
